front of any command to disable the specified expansion or all of them.

=back

=head2 New/enhanced builtins

=over 4

=item * B<modules>

=item * B<ulimit>

=item * B<printenv>

=item * B<hash>

=item * B<rehash>

=item * B<jobs> has new flags B<-rsp>

=item * B<fc> has protection against endless loops and a more sensible range parsing

=back

=head2 Fixes

=over 4

=item *

Major startup speedup

=item *

There was a small, not very often occurring bug related to the usage of
Env::Array, due to a typo

=item *

Handling of ~ for username expansion should be bug-free now

=item *

The help builtin sometimes returned the wrong help (e.g. C<help set>
returned the help of setenv)

=item *

The parser parsed '&&' as if the user entered '& &&'.

=item *

C<@_> and C<$_> are saved between input lines.

=item *

If you're redirecting perl code, a new fork will be created. You'll therefore
lose all variable changes etc. in redirected perl code. That's not as bad as
it seems, as before the change, psh segfaulted most of the time you tried
redirecting perl code.

=back

=head2 Cleanups

=over 4

=item *

The package Psh::Job is now in the same file with Psh::Joblist. Psh::Job
stays an object while Psh::Joblist was converted to a procedural interface
as there was no need for OO here.

=item *

The package Psh::Locale::Base was renamed to Psh::Locale, so the Psh::Locale::
tree now only contains valid locales.

=item *

Many configuration variables have been removed. Please see README.upgrade and the new B<option> builtin.

=item *

Switch to new evaluation strategies system. Please also see README.upgrade

=item *

The builtin B<pshtokenize> was removed as it duplicated code from the
B<debug> strategy.

=item *

The builtin B<which> more conforms to the 'standard' which - it will only
locate an executable. Strategy B<debug> is similar to the old function of
B<which>

=back

=head2 Other changes

=over 4

=item *
