@@ -106,6 +106,11 @@ front of any command to disable the specified expansion or all of them.
 
 =item * B<fc> has protection against endless loops and a more sensible range parsing
 
+=item *
+
+Added a sudo builtin which adds some capabilities to the sudo command.
+(Michael Graham)
+
 =back
 
 =head2 Fixes
